# classroom-tools

./: .gitignore  LICENSE  Pipfile  README.md  capture-websites.js  collate_readmes.py  collect_notebooks.py  combine_notebooks.py  create_course_enrollment_flashcards.py  download_focs_exams.py  download_repo_fork_files.py  download_repos.py  github_fork_file_mod_times.py  package-lock.json  package.json  pyproject.toml  remove_identical_files.py  requirements-dev.txt  requirements.txt  scope_p_and_s_matrix.py  setup.cfg  summarize_scope_survey.py  utils.py
config/: .gitignore
scripts/: clone-repo-forks  collate-downloaded-files  collect_notebooks.py  combine-notebooks  combine_notebooks.py  create-enrollment-contact-sheet  create-enrollment-flashcards  create_course_enrollment_flashcards.py  download-repo-fork-files  download_repo_fork_files.py  github-fork-file-modtimes  github_fork_file_mod_times.py  summarize-scope-survey  summarize_scope_survey.py
templates/: contact_sheet.html  scope_survey_results.html
tests/: create_scope_test_file.py
tests/files/: SCOPE PandS template.csv  SCOPE PandS test.csv
