[tool.poetry]
name = "classroom-tools"
version = "0.1.0"
description = "Tools for collecting and processing classroom projects and assignments"
authors = ["Oliver Steele <steele@osteele.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8.1"
graphqlclient = "^0.2.4"
Jinja2 = "^2.10.3"
nbconvert = "^5.6.1"
numpy = "^1.17.4"
pandas = "^0.25.3"
PyGithub = "^1.44.1"
python-Levenshtein = "^0.12.0"
PyYAML = "^5.2"
xlsxwriter = "^1.2.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.4.4"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
